[gd_scene load_steps=14 format=3 uid="uid://b0w820dulgunt"]

[ext_resource type="Script" uid="uid://qbgpoqjrvtdi" path="res://instances/pnl_rs_user.gd" id="1_vc4pp"]
[ext_resource type="PackedScene" uid="uid://dpc8qa00yqwrs" path="res://instances/pnl_twitch_user_info.tscn" id="2_pux1v"]
[ext_resource type="PackedScene" uid="uid://bs6ykrldkscgn" path="res://instances/pnl_user_stats.tscn" id="3_my1fj"]
[ext_resource type="PackedScene" uid="uid://ca0xs5357oq1u" path="res://instances/pnl_user_beans.tscn" id="3_umsy5"]
[ext_resource type="StyleBox" uid="uid://cly0o4e4fqaop" path="res://ui/editor_light_panel_transp.stylebox" id="4_5ojrs"]
[ext_resource type="Texture2D" uid="uid://1ndihbuunqkm" path="res://ui/icons/bootstrap_icons/megaphone-fill.svg" id="5_5ojrs"]
[ext_resource type="PackedScene" uid="uid://d0cdydbgdy7ob" path="res://lib/games_info/pnl_steam_app_info.tscn" id="5_my1fj"]
[ext_resource type="PackedScene" uid="uid://blvbbujltlmrb" path="res://instances/pnl_games.tscn" id="5_umsy5"]
[ext_resource type="Texture2D" uid="uid://c2bfapbqs6yn8" path="res://ui/icons/bootstrap_icons/floppy-fill.png" id="6_wohka"]
[ext_resource type="Texture2D" uid="uid://dyvulwkiqobgx" path="res://ui/icons/bootstrap_icons/arrow-through-heart-fill.png" id="7_d1l5p"]
[ext_resource type="Texture2D" uid="uid://bl85mbqfcw114" path="res://ui/icons/bootstrap_icons/filetype-json.png" id="8_5yi8w"]
[ext_resource type="PackedScene" uid="uid://dxohy88odqn5f" path="res://lib/games_info/pnl_itchio_app_info.tscn" id="9_5yi8w"]
[ext_resource type="Texture2D" uid="uid://j610yfm3clvy" path="res://ui/icons/bootstrap_icons/heartbreak-fill.png" id="9_akubr"]

[node name="pnl_rs_user" type="PanelContainer"]
offset_right = 1327.0
offset_bottom = 903.0
script = ExtResource("1_vc4pp")
metadata/_tab_index = 0

[node name="bg_img" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="pnl_info" type="PanelContainer" parent="vb"]
layout_mode = 2

[node name="hb" type="HBoxContainer" parent="vb/pnl_info"]
layout_mode = 2

[node name="pnl_twitch_user_info" parent="vb/pnl_info/hb" instance=ExtResource("2_pux1v")]
unique_name_in_owner = true
layout_mode = 2

[node name="pnl_custom" type="PanelContainer" parent="vb"]
layout_mode = 2
size_flags_horizontal = 3

[node name="hb" type="HBoxContainer" parent="vb/pnl_custom"]
layout_mode = 2

[node name="grid" type="GridContainer" parent="vb/pnl_custom/hb"]
layout_mode = 2
columns = 2

[node name="lb4" type="Label" parent="vb/pnl_custom/hb/grid"]
layout_mode = 2
text = "Godot chat colour"

[node name="btn_custom_color" type="ColorPickerButton" parent="vb/pnl_custom/hb/grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="lb5" type="Label" parent="vb/pnl_custom/hb/grid"]
layout_mode = 2
text = "Notification sfx"

[node name="opt_custom_sfx" type="OptionButton" parent="vb/pnl_custom/hb/grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="lb7" type="Label" parent="vb/pnl_custom/hb/grid"]
layout_mode = 2
text = "Custom actions"

[node name="opt_custom_actions" type="OptionButton" parent="vb/pnl_custom/hb/grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="pnl_user_beans" parent="vb/pnl_custom/hb" instance=ExtResource("3_umsy5")]
unique_name_in_owner = true
layout_mode = 2

[node name="pnl_bot" type="PanelContainer" parent="vb"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("4_5ojrs")

[node name="hb" type="HSplitContainer" parent="vb/pnl_bot"]
layout_mode = 2

[node name="pnl_user_stats" parent="vb/pnl_bot/hb" instance=ExtResource("3_my1fj")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1

[node name="hb" type="HSplitContainer" parent="vb/pnl_bot/hb"]
layout_mode = 2
size_flags_vertical = 3

[node name="pnl_promo" type="PanelContainer" parent="vb/pnl_bot/hb/hb"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vb_promo" type="VBoxContainer" parent="vb/pnl_bot/hb/hb/pnl_promo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="flags" type="HBoxContainer" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="fl_is_streamer" type="CheckButton" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/flags"]
unique_name_in_owner = true
layout_mode = 2
text = "Streamer"
alignment = 2

[node name="fl_auto_shoutout" type="CheckButton" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/flags"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto-shoutout"
alignment = 2

[node name="fl_auto_promotion" type="CheckButton" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/flags"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto-promotion"
alignment = 2

[node name="HFlowContainer" type="HFlowContainer" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo"]
layout_mode = 2

[node name="hb1" type="HBoxContainer" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lb" type="Label" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb1"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Works with"

[node name="opt_work_with" type="OptionButton" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="hb2" type="HBoxContainer" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lb" type="Label" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Youtube"

[node name="btn_yt_promo" type="Button" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("5_5ojrs")
icon_alignment = 1
expand_icon = true

[node name="ln_youtube_handle" type="LineEdit" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "YouTube @handle"

[node name="hb4" type="HBoxContainer" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lb" type="Label" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb4"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Bluesky"

[node name="btn_bsky_promo" type="Button" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("5_5ojrs")
icon_alignment = 1
expand_icon = true

[node name="ln_bluesky_handle" type="LineEdit" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "b.sky @handle"

[node name="hb3" type="HBoxContainer" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lb" type="Label" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Website"

[node name="btn_web_promo" type="Button" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("5_5ojrs")
icon_alignment = 1
expand_icon = true

[node name="ln_website" type="LineEdit" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "https://"

[node name="te_so" type="TextEdit" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "shoutout message"
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="te_promote" type="TextEdit" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "promotion message"
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="pnl_games" parent="vb/pnl_bot/hb/hb/pnl_promo/vb_promo" instance=ExtResource("5_umsy5")]
unique_name_in_owner = true
layout_mode = 2

[node name="tab_game_info" type="TabContainer" parent="vb/pnl_bot/hb/hb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
current_tab = 0
tabs_visible = false

[node name="pnl_steam_app_info" parent="vb/pnl_bot/hb/hb/tab_game_info" instance=ExtResource("5_my1fj")]
unique_name_in_owner = true
layout_mode = 2
metadata/_tab_index = 0

[node name="pnl_itchio_app_info" parent="vb/pnl_bot/hb/hb/tab_game_info" instance=ExtResource("9_5yi8w")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="hb_tools" type="HBoxContainer" parent="vb"]
unique_name_in_owner = true
layout_mode = 2

[node name="btn_save" type="Button" parent="vb/hb_tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"
icon = ExtResource("6_wohka")
expand_icon = true

[node name="btn_reload" type="Button" parent="vb/hb_tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reload from file"
icon = ExtResource("7_d1l5p")
expand_icon = true

[node name="btn_open_file" type="Button" parent="vb/hb_tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Open user file"
icon = ExtResource("8_5yi8w")
expand_icon = true

[node name="btn_delete" type="Button" parent="vb/hb_tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete user"
icon = ExtResource("9_akubr")
expand_icon = true

[connection signal="pressed" from="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb2/btn_yt_promo" to="." method="_on_btn_yt_promo_pressed"]
[connection signal="focus_exited" from="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb2/ln_youtube_handle" to="." method="_on_ln_youtube_handle_focus_exited"]
[connection signal="text_submitted" from="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb2/ln_youtube_handle" to="." method="_on_ln_youtube_handle_text_submitted"]
[connection signal="pressed" from="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb4/btn_bsky_promo" to="." method="_on_btn_bsky_promo_pressed"]
[connection signal="focus_exited" from="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb4/ln_bluesky_handle" to="." method="_on_ln_bluesky_handle_focus_exited"]
[connection signal="text_submitted" from="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb4/ln_bluesky_handle" to="." method="_on_ln_bluesky_handle_text_submitted"]
[connection signal="pressed" from="vb/pnl_bot/hb/hb/pnl_promo/vb_promo/HFlowContainer/hb3/btn_web_promo" to="." method="_on_btn_web_promo_pressed"]
[connection signal="pressed" from="vb/hb_tools/btn_save" to="." method="_on_btn_save_pressed"]
[connection signal="pressed" from="vb/hb_tools/btn_reload" to="." method="_on_btn_reload_pressed"]
[connection signal="pressed" from="vb/hb_tools/btn_open_file" to="." method="_on_btn_open_file_pressed"]
[connection signal="pressed" from="vb/hb_tools/btn_delete" to="." method="_on_btn_delete_pressed"]
